[gd_scene load_steps=35 format=3 uid="uid://c86eafvesv12k"]

[ext_resource type="Script" path="res://objects/fire/fire.gd" id="1_3gyo7"]
[ext_resource type="PackedScene" uid="uid://dm0n1lgblhgtm" path="res://triggers/clickable_area_3d.tscn" id="2_xslho"]

[sub_resource type="Curve" id="Curve_y1ksp"]
min_value = -1.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_3rjk6"]
curve = SubResource("Curve_y1ksp")

[sub_resource type="Curve" id="Curve_jxr31"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 200), 0.0, 0.0, 0, 0, Vector2(0.984436, -200), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_2paus"]
curve = SubResource("Curve_jxr31")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bcrqd"]
lifetime_randomness = 0.29
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
direction = Vector3(0, 1, 0)
gravity = Vector3(0, 0.949, 0)
initial_velocity_min = 0.99
initial_velocity_max = 1.68
linear_accel_curve = SubResource("CurveTexture_2paus")
color = Color(0, 1, 1, 1)
hue_variation_min = -0.47
hue_variation_max = 0.14
hue_variation_curve = SubResource("CurveTexture_3rjk6")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qcyui"]
albedo_color = Color(0.827451, 0.372549, 0.309804, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_wkgkt"]
material = SubResource("StandardMaterial3D_qcyui")
radius = 0.092
height = 0.441

[sub_resource type="Curve" id="Curve_gjjfv"]
min_value = -1.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_2ar0t"]
curve = SubResource("Curve_gjjfv")

[sub_resource type="Curve" id="Curve_7hv7l"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 200), 0.0, 0.0, 0, 0, Vector2(0.984436, -200), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_rs3hd"]
curve = SubResource("Curve_7hv7l")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sc35v"]
lifetime_randomness = 0.29
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
direction = Vector3(0, 1, 0)
gravity = Vector3(0, 0.949, 0)
initial_velocity_min = 0.99
initial_velocity_max = 1.68
linear_accel_curve = SubResource("CurveTexture_rs3hd")
color = Color(0, 1, 1, 1)
hue_variation_min = -0.47
hue_variation_max = 0.14
hue_variation_curve = SubResource("CurveTexture_2ar0t")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cyomn"]
albedo_color = Color(0.972549, 0.8, 0.235294, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_n4frx"]
material = SubResource("StandardMaterial3D_cyomn")
radius = 0.092
height = 0.441

[sub_resource type="Curve" id="Curve_x7as5"]
min_value = -1.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_12hem"]
curve = SubResource("Curve_x7as5")

[sub_resource type="Curve" id="Curve_31j5k"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 200), 0.0, 0.0, 0, 0, Vector2(0.984436, -200), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_gvfae"]
curve = SubResource("Curve_31j5k")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mkrwm"]
lifetime_randomness = 0.29
emission_shape = 3
emission_box_extents = Vector3(1, 0.442, 1)
direction = Vector3(0, 1, 0)
gravity = Vector3(0, 0.241, 0)
linear_accel_curve = SubResource("CurveTexture_gvfae")
color = Color(0, 1, 1, 1)
hue_variation_min = -0.47
hue_variation_max = 0.14
hue_variation_curve = SubResource("CurveTexture_12hem")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pobir"]
transparency = 1
blend_mode = 1

[sub_resource type="SphereMesh" id="SphereMesh_cnksx"]
material = SubResource("StandardMaterial3D_pobir")
radius = 0.3
height = 0.6

[sub_resource type="Curve" id="Curve_h374o"]
min_value = -1.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_pk0if"]
curve = SubResource("Curve_h374o")

[sub_resource type="Curve" id="Curve_dnsbw"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 200), 0.0, 0.0, 0, 0, Vector2(0.984436, -200), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_npmse"]
curve = SubResource("Curve_dnsbw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_pacgb"]
lifetime_randomness = 0.29
emission_shape = 3
emission_box_extents = Vector3(0.287, 0.442, 0.277)
direction = Vector3(0, 1, 0)
gravity = Vector3(0, 0.241, 0)
initial_velocity_min = 0.53
initial_velocity_max = 0.53
linear_accel_curve = SubResource("CurveTexture_npmse")
color = Color(0, 1, 1, 1)
hue_variation_min = -0.47
hue_variation_max = 0.14
hue_variation_curve = SubResource("CurveTexture_pk0if")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iswso"]
albedo_color = Color(0.298039, 0.0705882, 0.0823529, 1)

[sub_resource type="SphereMesh" id="SphereMesh_pyojd"]
material = SubResource("StandardMaterial3D_iswso")
radius = 0.3
height = 0.6

[sub_resource type="Animation" id="Animation_a41ic"]
resource_name = "light_flicker"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OmniLight3D:light_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.839216, 0.537255, 0.184314, 1), Color(0.839216, 0.356863, 0.278431, 1), Color(0.980392, 0.635294, 0.286275, 1), Color(0.941176, 0.52549, 0.443137, 1), Color(0.839216, 0.537255, 0.184314, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OmniLight3D:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [1.303, 2.036, 2.996, 1.559, 2.109, 1.303]
}

[sub_resource type="Animation" id="Animation_dwfl2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OmniLight3D:light_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.839216, 0.356863, 0.278431, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OmniLight3D:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.036]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lg3jg"]
_data = {
"RESET": SubResource("Animation_dwfl2"),
"light_flicker": SubResource("Animation_a41ic")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_krkk5"]
radius = 1.635

[node name="Fire" type="Node3D"]
script = ExtResource("1_3gyo7")

[node name="GPUParticles3D3" type="GPUParticles3D" parent="."]
amount = 34
process_material = SubResource("ParticleProcessMaterial_bcrqd")
draw_pass_1 = SubResource("CapsuleMesh_wkgkt")

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
amount = 80
process_material = SubResource("ParticleProcessMaterial_sc35v")
draw_pass_1 = SubResource("CapsuleMesh_n4frx")

[node name="GPUParticles3D2" type="GPUParticles3D" parent="."]
amount = 80
process_material = SubResource("ParticleProcessMaterial_mkrwm")
draw_pass_1 = SubResource("SphereMesh_cnksx")

[node name="GPUParticles3D4" type="GPUParticles3D" parent="."]
amount = 80
process_material = SubResource("ParticleProcessMaterial_pacgb")
draw_pass_1 = SubResource("SphereMesh_pyojd")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.951295, 0)
light_color = Color(0.839216, 0.356863, 0.278431, 1)
light_energy = 2.036
omni_range = 4.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "light_flicker"
libraries = {
"": SubResource("AnimationLibrary_lg3jg")
}

[node name="ClickableArea3D" parent="." instance=ExtResource("2_xslho")]

[node name="CollisionShape3D" parent="ClickableArea3D" index="0"]
shape = SubResource("SphereShape3D_krkk5")

[connection signal="clicked" from="ClickableArea3D" to="." method="_on_area_3d_clicked"]

[editable path="ClickableArea3D"]
